--- a/backend-workspace/pillReminderJava/pom.xml
+++ b/backend-workspace/pillReminderJava/pom.xml
@@ -34,7 +34,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <!--  -->
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>8.0.16</version>
+		</dependency>
     </dependencies>
     
     <build>
@@ -46,5 +51,7 @@
         </plugins>
     </build>
   
+  	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	
   
 </project>
